Added staging folder, license, readme
- Added license and readme files
- updated the script to create a staging folder if one doesn't exist
- updated the script to use the newer getWebLayerSharingDraft instead of the deprecated CreateWebLayerSDDraft. Made modification to readme and example config to reflect change

--- a/settings.config.example
+++ b/settings.config.example
@@ -13,7 +13,7 @@
                 "org":true,
                 "groups":[]
             },
-            "type":"FEATURE_ACCESS"
+            "type":"FEATURE"
         }
     ]
 }
