--- a/settings.config.example
+++ b/settings.config.example
@@ -13,7 +13,31 @@
                 "org":true,
                 "groups":[]
             },
+            "sync":{
+                "frequency":"daily",
+                "last":"2021-04-08"
+            }
             "type":"FEATURE"
+        },
+        {
+            "id":"portalIDofVectorTileLayerToReplace",
+            "map":"Map1",
+            "name":"Map1",
+            "portalfolder":"",
+            "process":true,
+            "project":"C:\\PathToArcGISProProject.aprx",
+            "sharing": {
+                "public":true,
+                "org":true,
+                "groups":[]
+            },
+            "summary":"Summary for the vector tile layer",
+            "sync":{
+                "frequency":"weekly",
+                "last":"2021-04-05"
+            },
+            "tags":"tag1, tag2",
+            "type":"REPLACEVECTORTILE"
         }
     ]
 }
