Added support for retrying service overwrite

--- a/settings.config.example
+++ b/settings.config.example
@@ -2,6 +2,7 @@
     "portal":"https://www.arcgis.com",
     "username":"",
     "password":"",
+    "retrylimit":5,
     "services": [
         {
             "name":"Sample_Hosted_Feature_Layer",
